--- a/src/Owin.Swagger.Documentation/project.json
+++ b/src/Owin.Swagger.Documentation/project.json
@@ -3,7 +3,7 @@
   "buildOptions": {
     "emitEntryPoint": true
   },
-  "description": "Owin.Swagger.Documentation",
+  "description": "Owin swagger documentation",
   "authors": [ "sreejesh" ],
   "tags": [ "" ],
   "projectUrl": "",
